gcc/testsuite/rust/rustc/ui/unterminated-doc-comment.rs
/*! // { dg-error ".E0758." "" { target *-*-* } }

